--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -8,7 +8,6 @@ workflows:
       vars:
         PROJECT_DIR: "ios"
         SCHEME: "Audiobooks"
-        DERIVED_DATA: "$CM_BUILD_DIR/DerivedData"
       xcode: latest
 
     scripts:
@@ -32,19 +31,19 @@ workflows:
             -scheme "$SCHEME" \
             -sdk iphonesimulator \
             -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
-            -derivedDataPath "$DERIVED_DATA" \
+            -configuration Debug \
             CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO \
             build | xcpretty
 
       - name: Package .app
         script: |
-          APP_PATH=$(find "$DERIVED_DATA/Build/Products" -type d -name "*.app" | head -n 1)
+          APP_PATH=$(find "$PROJECT_DIR"/build -type d -name "*.app" | head -n 1)
           echo "App at: $APP_PATH"
-          mkdir -p "$CM_ARTIFACTS/app"
-          cp -R "$APP_PATH" "$CM_ARTIFACTS/app/"
+          mkdir -p "$CM_ARTIFACTS"
+          cp -R "$APP_PATH" "$CM_ARTIFACTS/"
 
     artifacts:
-      - app/*.app
+      - "*.app"
 
     publishing:
       email:
