--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -22,27 +22,65 @@ workflows:
         script: |
           cd "$PROJECT_DIR"
           xcodegen generate
-          ls -la
+
+      - name: Check generated files
+        script: |
+          echo "Listing contents of ios/"
+          ls -la "$PROJECT_DIR"
+          echo "Listing generated project structure:"
+          ls -R "$PROJECT_DIR"
+
+      - name: List available schemes
+        script: |
+          cd "$PROJECT_DIR"
+          if [ -d "Audiobooks.xcodeproj" ]; then
+            echo "Found .xcodeproj"
+            xcodebuild -project Audiobooks.xcodeproj -list -json
+          elif [ -d "Audiobooks.xcworkspace" ]; then
+            echo "Found .xcworkspace"
+            xcodebuild -workspace Audiobooks.xcworkspace -list -json
+          else
+            echo "No Xcode project/workspace found!"
+            exit 1
+          fi
 
       - name: Build for iOS Simulator (no code signing)
         script: |
           cd "$PROJECT_DIR"
-          xcodebuild \
-            -project Audiobooks.xcodeproj \
-            -scheme "$SCHEME" \
-            -sdk iphonesimulator \
-            -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
-            -derivedDataPath "$DERIVED_DATA" \
-            CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO \
-            build | xcpretty
+          if [ -d "Audiobooks.xcodeproj" ]; then
+            xcodebuild \
+              -project Audiobooks.xcodeproj \
+              -scheme "$SCHEME" \
+              -sdk iphonesimulator \
+              -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
+              -derivedDataPath "$DERIVED_DATA" \
+              CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO \
+              build | xcpretty
+          elif [ -d "Audiobooks.xcworkspace" ]; then
+            xcodebuild \
+              -workspace Audiobooks.xcworkspace \
+              -scheme "$SCHEME" \
+              -sdk iphonesimulator \
+              -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
+              -derivedDataPath "$DERIVED_DATA" \
+              CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO \
+              build | xcpretty
+          else
+            echo "No project or workspace to build."
+            exit 1
+          fi
 
       - name: "Debug: list build outputs"
         script: |
-          ls -R "$DERIVED_DATA/Build/Products"
+          ls -R "$DERIVED_DATA/Build/Products" || echo "No products found"
 
       - name: Package .app
         script: |
-          APP_PATH=$(find "$DERIVED_DATA/Build/Products" -type d -name "*.app" | head -n 1)
+          APP_PATH=$(find "$DERIVED_DATA/Build/Products" -type d -name "*.app" | head -n 1 || true)
+          if [ -z "$APP_PATH" ]; then
+            echo "No .app found, build likely failed."
+            exit 1
+          fi
           echo "App at: $APP_PATH"
           mkdir -p "$CM_ARTIFACTS/app"
           cp -R "$APP_PATH" "$CM_ARTIFACTS/app/"
