--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,26 +1,40 @@
+workflows:
+  ios-simulator-build:
+    name: iOS Simulator Build
+    max_build_duration: 60
+    instance_type: mac_mini_m1
+
+    environment:
+      vars:
+        PROJECT_DIR: "ios"
+        SCHEME: "Audiobooks"
+        DERIVED_DATA: "$CM_BUILD_DIR/DerivedData"
+      xcode: latest
+
+    scripts:
+      - name: Install build tools
+        script: |
+          brew update
+          brew install xcodegen || true
+          gem install fastlane --no-document
+
+      - name: Generate Xcode project from project.yml
+        script: |
+          cd "$PROJECT_DIR"
+          xcodegen generate
+
       - name: Build for iOS Simulator (no code signing)
         script: |
           cd "$PROJECT_DIR"
           set -o pipefail
-          if [ -d "Audiobooks.xcodeproj" ]; then
-            xcodebuild \
-              -project Audiobooks.xcodeproj \
-              -scheme "$SCHEME" \
-              -sdk iphonesimulator \
-              -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
-              -derivedDataPath "$DERIVED_DATA" \
-              CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO \
-              build
-          elif [ -d "Audiobooks.xcworkspace" ]; then
-            xcodebuild \
-              -workspace Audiobooks.xcworkspace \
-              -scheme "$SCHEME" \
-              -sdk iphonesimulator \
-              -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
-              -derivedDataPath "$DERIVED_DATA" \
-              CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO \
-              build
-          else
-            echo "No project or workspace to build."
-            exit 1
-          fi
+          xcodebuild \
+            -project Audiobooks.xcodeproj \
+            -scheme "$SCHEME" \
+            -sdk iphonesimulator \
+            -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
+            -derivedDataPath "$DERIVED_DATA" \
+            CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO \
+            build
+
+    artifacts:
+      - app/*.app
