--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -27,6 +27,8 @@ workflows:
         script: |
           echo "Listing contents of ios/"
           ls -la "$PROJECT_DIR"
+          echo "Listing generated project structure:"
+          ls -R "$PROJECT_DIR"
 
       - name: List available schemes
         script: |
@@ -45,7 +47,6 @@ workflows:
       - name: Build for iOS Simulator (no code signing)
         script: |
           cd "$PROJECT_DIR"
-          set -o pipefail
           if [ -d "Audiobooks.xcodeproj" ]; then
             xcodebuild \
               -project Audiobooks.xcodeproj \
@@ -54,7 +55,7 @@ workflows:
               -destination 'platform=iOS Simulator,name=iPhone 15,OS=17.5' \
               -derivedDataPath "$DERIVED_DATA" \
               CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO \
-              build | tee build.log
+              build
           elif [ -d "Audiobooks.xcworkspace" ]; then
             xcodebuild \
               -workspace Audiobooks.xcworkspace \
@@ -63,18 +64,15 @@ workflows:
               -destination 'platform=iOS Simulator,name=iPhone 15,OS=17.5' \
               -derivedDataPath "$DERIVED_DATA" \
               CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO \
-              build | tee build.log
+              build
           else
             echo "No project or workspace to build."
             exit 1
           fi
 
-      - name: Collect errors
+      - name: "Debug: list build outputs"
         script: |
-          echo "=== ERRORS FOUND ==="
-          grep -A3 -B3 "error:" build.log || true
-          echo "=== Last 100 lines of build.log ==="
-          tail -n 100 build.log
+          ls -R "$DERIVED_DATA/Build/Products" || echo "No products found"
 
       - name: Package .app
         script: |
