--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,79 +1,29 @@
 workflows:
-  ios-simulator-build:
-    name: iOS Simulator Build
+  ios-debug:
+    name: iOS Debug Build
     max_build_duration: 60
-    instance_type: mac_mini_m1
-
     environment:
+      xcode: 16.4
       vars:
-        PROJECT_DIR: "ios"
-        SCHEME: "Audiobooks"
-        DERIVED_DATA: "$CM_BUILD_DIR/DerivedData"
-      xcode: latest
-
+        DERIVED_DATA: /Users/builder/clone/DerivedData
     scripts:
-      - name: Install build tools
+      - name: Install dependencies
         script: |
-          brew update
-          brew install xcodegen || true
-          gem install fastlane --no-document
-
-      - name: Generate Xcode project from project.yml
-        script: |
-          cd "$PROJECT_DIR"
-          xcodegen generate
-
-      - name: Check generated files
-        script: |
-          echo "Listing contents of ios/"
-          ls -la "$PROJECT_DIR"
-          echo "Listing generated project structure:"
-          ls -R "$PROJECT_DIR"
-
-      - name: List available schemes
-        script: |
-          cd "$PROJECT_DIR"
-          if [ -d "Audiobooks.xcodeproj" ]; then
-            echo "Found .xcodeproj"
-            xcodebuild -project Audiobooks.xcodeproj -list -json
-          elif [ -d "Audiobooks.xcworkspace" ]; then
-            echo "Found .xcworkspace"
-            xcodebuild -workspace Audiobooks.xcworkspace -list -json
-          else
-            echo "No Xcode project/workspace found!"
-            exit 1
-          fi
-
+          brew install wget || true
+          gem install cocoapods || true
+          pod install || true
       - name: Build for iOS Simulator (no code signing)
         script: |
-          cd "$PROJECT_DIR"
-          if [ -d "Audiobooks.xcodeproj" ]; then
-            xcodebuild \
-              -project Audiobooks.xcodeproj \
-              -scheme "$SCHEME" \
-              -sdk iphonesimulator \
-              -destination 'platform=iOS Simulator,name=iPhone 15,OS=17.5' \
-              -derivedDataPath "$DERIVED_DATA" \
-              CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO \
-              build
-          elif [ -d "Audiobooks.xcworkspace" ]; then
-            xcodebuild \
-              -workspace Audiobooks.xcworkspace \
-              -scheme "$SCHEME" \
-              -sdk iphonesimulator \
-              -destination 'platform=iOS Simulator,name=iPhone 15,OS=17.5' \
-              -derivedDataPath "$DERIVED_DATA" \
-              CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO \
-              build
-          else
-            echo "No project or workspace to build."
-            exit 1
-          fi
-
-      - name: "Debug: list build outputs"
-        script: |
-          ls -R "$DERIVED_DATA/Build/Products" || echo "No products found"
-
+          xcodebuild \
+            -project ios/Audiobooks.xcodeproj \
+            -scheme Audiobooks \
+            -sdk iphonesimulator \
+            -destination "platform=iOS Simulator,name=iPhone 15,OS=17.5" \
+            -derivedDataPath "$DERIVED_DATA" \
+            CODE_SIGN_IDENTITY="" \
+            CODE_SIGNING_REQUIRED=NO \
+            CODE_SIGNING_ALLOWED=NO \
+            build
       - name: Package .app
         script: |
           APP_PATH=$(find "$DERIVED_DATA/Build/Products" -type d -name "*.app" | head -n 1 || true)
@@ -84,6 +34,9 @@ workflows:
           echo "App at: $APP_PATH"
           mkdir -p "$CM_ARTIFACTS/app"
           cp -R "$APP_PATH" "$CM_ARTIFACTS/app/"
-
     artifacts:
-      - app/*.app
+      - app/**
+    publishing:
+      email:
+        recipients:
+          - your@email.com
