--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,42 +1,37 @@
 workflows:
-  ios-debug:
-    name: iOS Debug Build
+  ios-simulator-build:
+    name: iOS Simulator Build
+    instance_type: mac_mini_m1
     max_build_duration: 60
+
     environment:
-      xcode: 16.4
       vars:
-        DERIVED_DATA: /Users/builder/clone/DerivedData
+        SCHEME: "Audiobooks"
+        DERIVED_DATA: "$CM_BUILD_DIR/DerivedData"
+      xcode: latest
+
     scripts:
-      - name: Install dependencies
-        script: |
-          brew install wget || true
-          gem install cocoapods || true
-          pod install || true
       - name: Build for iOS Simulator (no code signing)
         script: |
           xcodebuild \
             -project ios/Audiobooks.xcodeproj \
-            -scheme Audiobooks \
+            -scheme "$SCHEME" \
             -sdk iphonesimulator \
             -destination "platform=iOS Simulator,name=iPhone 15,OS=17.5" \
             -derivedDataPath "$DERIVED_DATA" \
-            CODE_SIGN_IDENTITY="" \
-            CODE_SIGNING_REQUIRED=NO \
-            CODE_SIGNING_ALLOWED=NO \
-            build
+            CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO \
+            build | xcpretty
+
       - name: Package .app
         script: |
           APP_PATH=$(find "$DERIVED_DATA/Build/Products" -type d -name "*.app" | head -n 1 || true)
           if [ -z "$APP_PATH" ]; then
-            echo "No .app found, build likely failed."
+            echo "No .app found, build failed."
             exit 1
           fi
           echo "App at: $APP_PATH"
           mkdir -p "$CM_ARTIFACTS/app"
           cp -R "$APP_PATH" "$CM_ARTIFACTS/app/"
+
     artifacts:
-      - app/**
-    publishing:
-      email:
-        recipients:
-          - your@email.com
+      - app/*.app
