--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,37 +1,39 @@
 workflows:
-  ios-simulator-build:
-    name: iOS Simulator Build
-    instance_type: mac_mini_m1
+  ios-debug:
+    name: iOS Debug Build
     max_build_duration: 60
-
     environment:
+      xcode: 16.4
       vars:
         SCHEME: "Audiobooks"
+        PROJECT_PATH: "ios/Audiobooks.xcodeproj"
         DERIVED_DATA: "$CM_BUILD_DIR/DerivedData"
-      xcode: latest
-
     scripts:
+      - name: Install dependencies
+        script: |
+          brew install xcpretty || true
       - name: Build for iOS Simulator (no code signing)
         script: |
           xcodebuild \
-            -project ios/Audiobooks.xcodeproj \
+            -project "$PROJECT_PATH" \
             -scheme "$SCHEME" \
             -sdk iphonesimulator \
             -destination "platform=iOS Simulator,name=iPhone 15,OS=17.5" \
             -derivedDataPath "$DERIVED_DATA" \
-            CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO \
+            CODE_SIGN_IDENTITY="" \
+            CODE_SIGNING_REQUIRED=NO \
+            CODE_SIGNING_ALLOWED=NO \
             build | xcpretty
-
       - name: Package .app
         script: |
-          APP_PATH=$(find "$DERIVED_DATA/Build/Products" -type d -name "*.app" | head -n 1 || true)
-          if [ -z "$APP_PATH" ]; then
-            echo "No .app found, build failed."
+          APP_PATH="$DERIVED_DATA/Build/Products/Debug-iphonesimulator/$SCHEME.app"
+          if [ ! -d "$APP_PATH" ]; then
+            echo "No .app found at $APP_PATH, build failed."
+            ls -R "$DERIVED_DATA/Build" || true
             exit 1
           fi
           echo "App at: $APP_PATH"
           mkdir -p "$CM_ARTIFACTS/app"
           cp -R "$APP_PATH" "$CM_ARTIFACTS/app/"
-
     artifacts:
-      - app/*.app
+      - $CM_ARTIFACTS/app/*.app
