--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,90 +1,22 @@
 workflows:
-  ios-simulator-build:
+  ios-debug:
     name: iOS Simulator Build
     max_build_duration: 60
-    instance_type: mac_mini_m1
-
     environment:
-      vars:
-        PROJECT_DIR: "ios"
-        SCHEME: "Audiobooks"
-        DERIVED_DATA: "$CM_BUILD_DIR/DerivedData"
       xcode: latest
-
     scripts:
-      - name: Install build tools
-        script: |
-          brew update
-          brew install xcodegen || true
-          gem install fastlane --no-document
-
-      - name: Generate Xcode project from project.yml
-        script: |
-          cd "$PROJECT_DIR"
-          xcodegen generate
-
-      - name: Check generated files
-        script: |
-          echo "Listing contents of ios/"
-          ls -la "$PROJECT_DIR"
-          echo "Listing generated project structure:"
-          ls -R "$PROJECT_DIR"
-
-      - name: List available schemes
-        script: |
-          cd "$PROJECT_DIR"
-          if [ -d "Audiobooks.xcodeproj" ]; then
-            echo "Found .xcodeproj"
-            xcodebuild -project Audiobooks.xcodeproj -list -json
-          elif [ -d "Audiobooks.xcworkspace" ]; then
-            echo "Found .xcworkspace"
-            xcodebuild -workspace Audiobooks.xcworkspace -list -json
-          else
-            echo "No Xcode project/workspace found!"
-            exit 1
-          fi
-
       - name: Build for iOS Simulator (no code signing)
         script: |
-          cd "$PROJECT_DIR"
-          if [ -d "Audiobooks.xcodeproj" ]; then
-            xcodebuild \
-              -project Audiobooks.xcodeproj \
-              -scheme "$SCHEME" \
-              -sdk iphonesimulator \
-              -destination 'platform=iOS Simulator,name=iPhone 15,OS=17.5' \
-              -derivedDataPath "$DERIVED_DATA" \
-              CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO \
-              build | xcpretty
-          elif [ -d "Audiobooks.xcworkspace" ]; then
-            xcodebuild \
-              -workspace Audiobooks.xcworkspace \
-              -scheme "$SCHEME" \
-              -sdk iphonesimulator \
-              -destination 'platform=iOS Simulator,name=iPhone 15,OS=17.5' \
-              -derivedDataPath "$DERIVED_DATA" \
-              CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO \
-              build | xcpretty
-          else
-            echo "No project or workspace to build."
-            exit 1
-          fi
-
-      - name: "Debug: list build outputs"
-        script: |
-          ls -R "$DERIVED_DATA/Build/Products" || echo "No products found"
-
-      - name: Package .app
-        script: |
-          APP_PATH="$DERIVED_DATA/Build/Products/Debug-iphonesimulator/$SCHEME.app"
-          echo "Looking for app at $APP_PATH"
-          if [ ! -d "$APP_PATH" ]; then
-            echo "No .app found, build failed."
-            exit 1
-          fi
-          mkdir -p "$CM_ARTIFACTS/app"
-          cp -R "$APP_PATH" "$CM_ARTIFACTS/app/"
-          echo "App successfully copied to artifacts!"
-
+          xcodebuild \
+            -project ios/Audiobooks.xcodeproj \
+            -scheme Audiobooks \
+            -sdk iphonesimulator \
+            -destination "platform=iOS Simulator,name=iPhone 15,OS=17.5" \
+            -derivedDataPath DerivedData \
+            CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO build
     artifacts:
-      - app/*.app
+      - DerivedData/Build/Products/Debug-iphonesimulator/*.app
+    publishing:
+      email:
+        recipients:
+          - 7520960@gmail.com
