--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,29 +1,39 @@
 workflows:
-  ios-simulator:
-    name: iOS Simulator Build
-    max_build_duration: 60
+  ios-appstore:
+    name: iOS App Store Build
     environment:
-      xcode: latest
+      ios_signing:
+        distribution_type: app_store
+        bundle_identifier: "com.serhiitkachuk.Audiobooks"
+        provisioning_profiles:
+          - audiobooks_appstore_profile
+        certificates:
+          - SSS
     scripts:
-      - name: Install XcodeGen
-        script: |
-          brew install xcodegen
-      - name: Generate Xcode project from project.yml
+      - name: Install dependencies
         script: |
           cd ios
-          xcodegen generate
-      - name: Build for iOS Simulator (no code signing)
+          pod install --repo-update
+      - name: Build ipa for distribution
         script: |
           xcodebuild \
-            -project ios/Audiobooks.xcodeproj \
-            -scheme Audiobooks \
-            -sdk iphonesimulator \
-            -destination "platform=iOS Simulator,name=iPhone 15,OS=17.5" \
-            -derivedDataPath DerivedData \
-            CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO build
+            -workspace "ios/Runner.xcworkspace" \
+            -scheme "Runner" \
+            -sdk iphoneos \
+            -configuration Release \
+            archive \
+            -archivePath $CM_BUILD_DIR/Runner.xcarchive \
+            DEVELOPMENT_TEAM=$APP_STORE_CONNECT_TEAM_ID \
+            PRODUCT_BUNDLE_IDENTIFIER=com.serhiitkachuk.Audiobooks
+          xcodebuild \
+            -exportArchive \
+            -archivePath $CM_BUILD_DIR/Runner.xcarchive \
+            -exportOptionsPlist ios/exportOptions.plist \
+            -exportPath $CM_BUILD_DIR
     artifacts:
-      - DerivedData/Build/Products/Debug-iphonesimulator/*.app
+      - build/ios/ipa/*.ipa
     publishing:
-      email:
-        recipients:
-          - 7520960@gmail.com
+      app_store_connect:
+        auth: integration
+        submit_to_testflight: true
+        submit_to_app_store: false
