--- a/ios/Info.plist
+++ b/ios/Info.plist
@@ -5,7 +5,7 @@
     <key>CFBundleName</key>
     <string>Аудиокниги</string>
     <key>CFBundleIdentifier</key>
-    <string>com.example.audiobooks</string>
+    <string>com.serhiitkachuk.Audiobooks</string>
     <key>UIBackgroundModes</key>
     <array>
       <string>audio</string>
