--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,25 +1,23 @@
 workflows:
   ios-appstore:
-    name: iOS App Store
-    instance_type: mac_mini_m1
-    max_build_duration: 60
+    name: iOS App Store Build
     environment:
+      vars:
+        XCODE_WORKSPACE: "Audiobooks.xcworkspace"
+        XCODE_SCHEME: "Audiobooks"
       ios_signing:
         certificates:
           - SSS
         provisioning_profiles:
           - audiobooks_appstore_profile
-    integrations:
-      app_store_connect: Coda3
     scripts:
+      - name: Install dependencies
+        script: |
+          flutter pub get
       - name: Build ipa for App Store
         script: |
           xcode-project build-ipa \
-            --project ios/Audiobooks.xcodeproj \
-            --scheme Audiobooks
+            --workspace "$XCODE_WORKSPACE" \
+            --scheme "$XCODE_SCHEME"
     artifacts:
       - build/ios/ipa/*.ipa
-    publishing:
-      app_store_connect:
-        auth: integration
-        submit_to_testflight: true
