--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,8 +5,12 @@ workflows:
       xcode: 16.4
       cocoapods: default
     integrations:
-      app_store_connect: integration
+      app_store_connect: Coda3
     scripts:
+      - name: Install dependencies
+        script: |
+          cd ios
+          pod install --repo-update
       - name: Build app for release
         script: |
           xcode-project build-ipa \
@@ -14,9 +18,9 @@ workflows:
             --scheme Audiobooks \
             --archive-flags="-allowProvisioningUpdates"
     artifacts:
-      - build/ipa/*.ipa
+      - build/ios/ipa/*.ipa
     publishing:
       app_store_connect:
-        auth: integration
+        auth: Coda3
         submit_to_testflight: true
         submit_to_app_store: false
