--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -21,6 +21,6 @@ workflows:
       - build/ios/ipa/*.ipa
     publishing:
       app_store_connect:
-        auth: Coda3
+        auth: integration
         submit_to_testflight: true
         submit_to_app_store: false
