--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,23 +3,22 @@ workflows:
     name: iOS App Store Build
     environment:
       xcode: 16.4
-      cocoapods: default
     integrations:
-      app_store_connect: Coda3
+      app_store_connect: integration
+
     scripts:
-      - name: Install dependencies
-        script: |
-          pod install --repo-update
       - name: Build app for release
         script: |
           xcode-project build-ipa \
             --project Audiobooks.xcodeproj \
             --scheme Audiobooks \
             --archive-flags="-allowProvisioningUpdates"
+
     artifacts:
       - build/ios/ipa/*.ipa
+
     publishing:
       app_store_connect:
-        auth: Coda3
+        auth: integration
         submit_to_testflight: true
         submit_to_app_store: false
