--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,7 +5,7 @@ workflows:
       xcode: 16.4
       cocoapods: default
     integrations:
-      app_store_connect: Coda3
+      app_store_connect: integration   # имя интеграции в Codemagic
     scripts:
       - name: Install dependencies
         script: |
