--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,8 +1,8 @@
-platform :ios, '13.0'
+platform :ios, '15.0'
 
-use_frameworks!
-use_modular_headers!
+project 'Audiobooks.xcodeproj'
 
 target 'Audiobooks' do
-  # зависимости через CocoaPods пока не подключаем
+  use_frameworks!
+  use_modular_headers!
 end
