--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,14 +1,10 @@
 platform :ios, '13.0'
 
-project '../Audiobooks.xcodeproj'
+use_frameworks!
+use_modular_headers!
 
 target 'Audiobooks' do
-  use_frameworks!
-  use_modular_headers!
-
-  pod 'Firebase/Core'
-  pod 'Firebase/Auth'
-  pod 'Firebase/Storage'
-  pod 'Google-Mobile-Ads-SDK'
-  pod 'Purchases'
+  project 'ios/Audiobooks.xcodeproj'
+  pod 'Alamofire'
+  pod 'Kingfisher'
 end
