--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,8 +4,9 @@ use_frameworks!
 use_modular_headers!
 
 target 'Audiobooks' do
-  project 'Audiobooks.xcodeproj'
+  project 'ios/Audiobooks.xcodeproj'
 
   pod 'Alamofire', '~> 5.6'
   pod 'SwiftyJSON', '~> 5.0'
+  pod 'SDWebImage', '~> 5.0'
 end
