--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -17,7 +17,7 @@ workflows:
             --project ios/Audiobooks.xcodeproj \
             --scheme Audiobooks \
             --archive-flags="-allowProvisioningUpdates" \
-            --export-options-plist /Users/builder/export_options.plist
+            --export-options-plist ios/export_options.plist
     artifacts:
       - build/ios/ipa/*.ipa
     publishing:
